--- a/src/css/cards.css
+++ b/src/css/cards.css
@@ -36,6 +36,7 @@
     gap: 10px;
     outline: 1px solid var(--border-mm-white);
     background: linear-gradient(To bottom, var(--bg-white) 20%, var(--bg-mm-white) 100%);
+    border-radius: var(--radius-card);
 
     .cont-text {
         width: 100%;
@@ -57,87 +58,78 @@
 /*ooooooooooooooooooooooooooooooooooooooooooooooooooooooooooooooooooooooo*/
 /*ooooooooooooooooooooooooooooooooooooooooooooooooooooooooooooooooooooooo*/
 
-.projects {
-    .cardProject {
-        width: 100%;
-        position: relative;
-        outline: 1px solid var(--border-mm-white);
-        padding: 20px;
-        background: var(--bg-white);
-        
-        img {
-            border-radius: 20px;
-            filter: saturate(0) brightness(0.7); 
-            max-width: 90%;
-            max-height: 300px;
-            -webkit-mask-image: linear-gradient(To bottom, var(--bg-white), transparent);
-            mask-image: linear-gradient(To bottom, var(--bg-white), transparent);
+.cardProject {
+    width: 100%;
+    position: relative;
+    outline: 1px solid var(--border-mm-white);
+    padding: 20px;
+    background: linear-gradient(To bottom, var(--bg-white) 90%, var(--bg-mm-white) 100%);
+    border-radius: var(--radius-card);
+    
+    img {
+        border-radius: 20px;
+        filter: saturate(0) brightness(0.4); 
+        max-width: 100%;
+    }
+
+    .cont-text {
+        display: grid;
+        gap: 10px; 
+        overflow: hidden;
+
+        div { display: flex; align-items: center; gap: 15px; }
+
+        .title {
+            width: 100%;
+            color: var(--font-black);
+            font-weight: 500;
+            font-size: 16px;
         }
 
-        .cont-text {
-            display: grid;
-            gap: 10px; 
-            margin-top: -30px;
-            overflow: hidden;
-
-            div { 
-                display: flex;
-                align-items: center;
-                gap: 15px;
-            }
-
-            .title {
-                width: 100%;
-                color: var(--font-black);
-                font-weight: 500;
-                font-size: 16px;
-            }
-
-            p {
-                font-weight: 500;
-                color: var(--font-sm-black);
-                display: -webkit-box;
-                -webkit-line-clamp: 4;
-                -webkit-box-orient: vertical;
-                text-overflow: ellipsis;
-                font-size: 14px;
-            }
+        p {
+            font-weight: 500;
+            color: var(--font-sm-black);
+            display: -webkit-box;
+            -webkit-line-clamp: 4;
+            -webkit-box-orient: vertical;
+            text-overflow: ellipsis;
+            font-size: 14px;
         }
+    }
 
-        .cont-links {
-            position: absolute;
-            top: 20px;
-            left: 20px;
-            display: flex;
-            align-items: center;
-            gap: 8px;
+    .cont-links {
+        position: absolute;
+        top: 20px;
+        left: 20px;
+        display: flex;
+        align-items: center;
+        gap: 8px;
 
-            .link {
-                padding: 5px 10px;
-                font-size: 12px;
-                text-decoration: none;
-                font-weight: 500;
-                color: var(--font-black);
-                outline: 1px solid var(--border-mm-white);
-                border-radius: var(--radius-card);
-                background-image: url('/fflurry.svg');
-                background-size: 200px;
-            }
+        .link {
+            padding: 5px 10px;
+            font-size: 12px;
+            text-decoration: none;
+            font-weight: 500;
+            color: var(--font-black);
+            outline: 1px solid var(--border-mm-white);
+            border-radius: var(--radius-card);
+            background-image: url('/fflurry.svg');
+            background-size: 200px;
         }
+    }
 
-        & .cont-skills {
-            position: absolute;
-            top: 10px;
-            right: 10px;
+    & .cont-skills {
+        position: absolute;
+        top: 20px;
+        right: 20px;
+        display: flex;
+        gap: 5px;
 
-            & img {
-                width: 30px;
-                filter: saturate(0) brightness(0.3);
-                mask-image: linear-gradient(To bottom, var(--bg-white), transparent);
-                border-radius: 30% 70% 70% 30% / 30% 30% 40% 70%;
-                border: 2px solid var(--border-sm-white);
-            }   
-        }
+        & img {
+            width: 30px;
+            filter: saturate(0) brightness(0.3);
+            border-radius: 50%;
+        }   
     }
 }
 
@@ -145,66 +137,70 @@
 /*ooooooooooooooooooooooooooooooooooooooooooooooooooooooooooooooooooooooo*/
 /*ooooooooooooooooooooooooooooooooooooooooooooooooooooooooooooooooooooooo*/
 
-.extra {
-    .cardTerminal {
-        width: 100%;
-        display: flex;
-        outline: 1px solid var(--border-mm-white);
-        background-color: var(--bg-white);
-        background-size: cover;
-        position: relative;
+.cardTerminal {
+    width: 100%;
+    display: flex;
+    outline: 1px solid var(--border-mm-white);
+    background-color: var(--bg-white);
+    border-radius: var(--radius-card);
+    background-size: cover;
+    position: relative;
 
-        pre {
-            width: 100%; 
-            height: 350px; 
-            font-size: 13px; 
-            line-height: 1.5; 
-            padding: 20px; 
-            border-radius: calc(var(--radius-card) + 5px);
-            backdrop-filter: blur(10px); 
-            background-color: #000000d3;
-            color: var(--font-sm-black); 
-            overflow: auto;
-            font-family: "Source Code Pro", monospace;
-            scrollbar-width: none;
-            font-weight: 600;
+    pre {
+        width: 100%; 
+        font-size: 14px; 
+        line-height: 1.5; 
+        padding: 20px; 
+        border-radius: calc(var(--radius-card) + 5px);
+        backdrop-filter: blur(10px); 
+        background-color: #000000d3;
+        color: var(--font-sm-black); 
+        overflow: auto;
+        font-family: "Source Code Pro", monospace;
+        scrollbar-width: none;
+        font-weight: 600;
+        max-height: 650px;
 
-            span {
-                font-weight: 500;
-                font-size: inherit;
-                font-family: inherit;
-            }
-
-            span.green { font-weight: 800; color: #ff0040; margin-right: 8px; }
-            span.yellow { font-weight: 800; color: #ff8c00; }
+        span {
+            font-weight: 500;
+            font-size: inherit;
+            font-family: inherit;
         }
 
-        .right-panel {
+        span.green { font-weight: 800; color: var(--font-black); margin-right: 8px; }
+        span.yellow { font-weight: 800; color: var(--font-black); }
+        span.blue { font-weight: 800; color: var(--font-black); }
+        span.red { font-weight: 800; color: var(--font-black); }
+    }
+
+    .right-panel {
+        display: flex;
+        flex-direction: column;
+        width: 300px;
+        border-left: 1px solid var(--border-mm-white);
+
+        span {
+            width: 100%;
             display: flex;
-            flex-direction: column;
-            width: 220px;
-            border-left: 1px solid var(--border-mm-white);
-
-            span {
-                width: 100%;
-                display: flex;
-                color: var(--font-sm-black);
-                font-size: 14px;
-                padding: 5px 15px;
-                gap: 5px;
-                
-                &:nth-child(1) {
-                    background-color: var(--bg-mm-white);
-                    border-bottom: 1px solid var(--bg-sm-white);
-                    color: var(--font-black);
-                    margin-bottom: 10px;
-                }
-
-                &:nth-child(6) { color: var(--font-black); }
-
-                svg { width: 18px; stroke-width: 2px; }
-                img { width: 18px; filter: saturate(0) brightness(0.7); }
+            color: var(--font-sm-black);
+            font-size: 14px;
+            padding: 5px 15px;
+            gap: 5px;
+            
+            &:nth-child(1) {
+                background-color: var(--bg-mm-white);
+                border-bottom: 1px solid var(--bg-sm-white);
+                color: var(--font-black);
+                margin-bottom: 10px;
+                font-weight: 500;
+                padding: 10px 15px;
+                font-size: 16px;
             }
+
+            &:nth-child(6) { color: var(--font-black); }
+
+            svg { width: 18px; stroke-width: 2px; }
+            img { width: 18px; filter: saturate(0) brightness(0.7); }
         }
     }
 }
