--- a/src/css/general.css
+++ b/src/css/general.css
@@ -125,38 +125,19 @@ p { line-height: 24px; }
     }
 }
 
-.me-cyber {
-    height: 400px;
+.banner {
+    width: 100%;
+    height: 300px;
+    display: grid; place-items: center;
+    padding-top: 70px;
     position: relative;
-    display: flex;
-    align-items: flex-end;
+    background-image: url('/Points.svg');
+    background-size: 250px;
+    border-top: 1px solid var(--border-mm-white);
     overflow: hidden;
 
-    img {
-        filter: saturate(0) brightness(0.5);
-        max-width: 600px;
-        outline: 1px solid var(--border-lm-white);
-    }
-
-    .edge-float {
-        position: absolute;
-        right: 0;
-        bottom: -180px;
-        width: 500px;
-        z-index: -1;
-        transform: rotate(190deg);
-        outline: none;
-    }
-
-    h1 {
-        width: 100%;
-        text-align: right;
-        font-size: 16px;
-        color: var(--font-black);
-        font-weight: 500;
-        line-height: 1.4;
-        padding: 15px;
-        outline: 1px solid var(--border-mm-white);
+    .circle-img {
+        max-width: 800px;
     }
 }
 
