--- a/src/css/home.css
+++ b/src/css/home.css
@@ -1,25 +1,13 @@
 nav {
     display: flex;
     align-items: center;
-    justify-content: space-between;
+    justify-content: flex-end;
     width: calc(100%);
     border-radius: var(--radius-card);
     padding: 0 15px;
-    margin-bottom: 30px;
     height: 70px;
     background-color: var(--bg-white);
     position: relative;
-
-    &::before {
-        position: absolute;
-        content: '';
-        bottom: 0;
-        left: 50%;
-        transform: translateX(-50%);
-        width: 500%;
-        height: 1px;
-        border-bottom: 1px solid var(--border-mm-white);
-    }
     
     ul {
         display: flex;
@@ -33,37 +21,14 @@ nav {
             color: var(--font-black);
             border: none;
             padding: 6px 15px;
-            border-radius: var(--radius-card);
             font-weight: 500;
-            background-color: var(--border-white);
+            border-radius: var(--radius-card);
             border: 1px solid var(--border-mm-white);
+            background: linear-gradient(To bottom, var(--bg-white) 40%, var(--bg-mm-white) 100%);
             
             & svg { color: inherit; width: 19px; }
 
-            &:hover {
-                opacity: 0.5;
-            }
-        }
-    }
-    
-    .navigate-link {
-        display: flex;
-        align-items: center;
-        
-        h1 {
-            text-align: center;
-            font-size: 22px;
-            color: var(--font-black);
-            font-weight: 900;
-            text-transform: uppercase;
-        }
-        
-        a, button {
-            display: flex;
-            color: var(--font-black);
-            padding: 0 5px;
-            background-color: transparent;
-            border: none;
+            &:hover { opacity: 0.5; }
         }
     }
 }
@@ -74,10 +39,10 @@ nav {
     align-items: center;
     justify-content: center;
     flex-direction: column;
-    margin-bottom: 80px;
+    padding: 30px 0;
 
     .Me {
-        width: 350px;
+        max-width: 350px;
         -webkit-mask-image: linear-gradient(To bottom, var(--bg-white) 70%, transparent 80%);
         mask-image: linear-gradient(To bottom, var(--bg-white) 70%, transparent 80%);
     }
@@ -86,15 +51,12 @@ nav {
         width: 100%;
         margin-top: -100px;
         text-align: center;
-        font-size: clamp(40px, 10vw, 80px);
+        font-size: clamp(50px, 5vw, 80px);
         color: var(--font-black);
         font-weight: 900;
         line-height: 1.1;
         padding: 15px;
-        border-top: 1px solid var(--border-mm-white);
-        border-bottom: 1px solid var(--border-mm-white);
-        background-image: url('/Lines.svg');
-        background-size: 200px;
+        white-space: nowrap;
     }
 }
 
@@ -115,7 +77,7 @@ nav {
         width: 80px;
         height: 100%;
         position: relative;
-        opacity: 0.3;
+        opacity: 0.2;
 
         &:nth-child(1) { background: linear-gradient(to bottom, #1a1a1a 0%, transparent 50%); }
         &:nth-child(2) { background: linear-gradient(to bottom, #333333 0%, transparent 55%); }
@@ -190,7 +152,7 @@ nav {
     span {
         position: absolute;
         top: calc(50% - 8px);
-        left: -120px;
+        left: -95px;
         color: var(--font-black);
         text-transform: uppercase;
         font-weight: 500;
@@ -204,6 +166,12 @@ nav {
     display: grid;
     position: relative;
     grid-template-columns: 1fr 1fr;
+}
+
+.experience, .service, .projects, .extra {
+    padding: 10px;
+    background-color: var(--bg-mm-white);
+    gap: 10px;
 }
 
 .about::before { display: none; }
